--- a/front/index.html
+++ b/front/index.html
@@ -10,89 +10,43 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="./assets/css/estilo.css" />
     <title>Document</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid" id="contenedor">
-        <a class="navbar-brand"
-          ><img src="./assets/media/logo.jpg" id="logo"
-        /></a>
+        <a class="navbar-brand"><img src="./assets/media/logo.jpg" id="logo" /></a>
         <input type="search" class="me-0" name="" id="buscador" />
-        <button type="button" class="btn btn-secondary" id="btnBuscar">
-          Buscar
-        </button>
+        <button type="button" class="btn btn-secondary" id="btnBuscar">Buscar</button>
         <button type="button" class="btn btn-secondary" id="btnLogin">
-          <a href="login.html" id="linkInicioSesion"
-            ><i class="bi bi-person-circle"></i> Iniciar sesión</a
-          >
+          <a href="login.html" id="linkInicioSesion"><i class="bi bi-person-circle"></i> Iniciar sesión</a>
         </button>
         <button type="button" class="btn btn-secondary" id="btnRegistrarse">
-          <a href="registro.html" id="linkRegistrarse"
-            ><i class="bi bi-person-add"></i> Registrarse</a
-          >
+          <a href="registro.html" id="linkRegistrarse"><i class="bi bi-person-add"></i> Registrarse</a>
         </button>
       </div>
     </nav>
     <div class="container-fluid">
-      <div class="row" id="filaCarrusel">
-        <div class="col-8">
-          <div
-            id="carouselExampleAutoplaying"
-            class="carousel slide"
-            data-bs-ride="true"
-          >
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="assets/media/astronauta.jpg" class="d-block w-100" />
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/media/messi.jpg" class="d-block w-100" />
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/media/planeta.jpg" class="d-block w-100" />
-              </div>
-            </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselExampleAutoplaying"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselExampleAutoplaying"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+      <form>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
+          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" />
         </div>
-      </div>
-      <div class="row" id="productos"></div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+          <input type="password" class="form-control" id="constraseña" />
+        </div>
+        <button type="submit" id="btnEnviar" class="btn btn-primary">Submit</button>
+      </form>
     </div>
-    <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/funciones.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./assets/js/alert.js"></script>
   </body>
 </html>
